--- a/tutorials/Python_PreReq_Notebook.ipynb
+++ b/tutorials/Python_PreReq_Notebook.ipynb
@@ -153,18 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "52550d58",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-11T20:52:15.041722Z",
-     "start_time": "2023-07-11T20:52:15.039550Z"
+     "end_time": "2025-08-07T06:18:38.625652Z",
+     "start_time": "2025-08-07T06:18:38.620080Z"
     }
    },
-   "outputs": [],
    "source": [
     "from urllib.request import urlretrieve"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -185,15 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "bbd9bd35",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-11T20:52:15.045618Z",
-     "start_time": "2023-07-11T20:52:15.043068Z"
+     "end_time": "2025-08-07T06:19:03.894684Z",
+     "start_time": "2025-08-07T06:19:03.874448Z"
     }
    },
-   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -208,7 +206,9 @@
     "for target_dir in ('tlc_data', 'tute_data'): # taxi_zones should already exist\n",
     "    if not os.path.exists(output_relative_dir + target_dir):\n",
     "        os.makedirs(output_relative_dir + target_dir)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -222,62 +222,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "afb62526",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-11T20:52:15.048828Z",
-     "start_time": "2023-07-11T20:52:15.047238Z"
+     "end_time": "2025-08-07T06:19:08.828848Z",
+     "start_time": "2025-08-07T06:19:08.822958Z"
     }
    },
-   "outputs": [],
    "source": [
     "YEAR = '2024'\n",
     "# adjust the range function to the numerical months i.e 1 = jan, 2 = feb, etc...\n",
     "# MONTHS = range(1, 13)\n",
     "MONTHS = range(1, 4)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "14395028",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-11T20:52:15.052305Z",
-     "start_time": "2023-07-11T20:52:15.050760Z"
+     "end_time": "2025-08-07T06:19:09.507419Z",
+     "start_time": "2025-08-07T06:19:09.501089Z"
     }
    },
-   "outputs": [],
    "source": [
     "# this is the URL template as of 07/2023\n",
     "URL_TEMPLATE = \"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_\"#year-month.parquet"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "613317b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-11T21:23:35.202286Z",
-     "start_time": "2023-07-11T21:23:15.944342Z"
+     "end_time": "2025-08-07T06:20:55.820676Z",
+     "start_time": "2025-08-07T06:19:10.692362Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Begin month 01\n",
-      "Completed month 01\n",
-      "Begin month 02\n",
-      "Completed month 02\n",
-      "Begin month 03\n",
-      "Completed month 03\n"
-     ]
-    }
-   ],
    "source": [
     "# data output directory is `data/tlc_data/`\n",
     "tlc_output_dir = output_relative_dir + 'tlc_data'\n",
@@ -295,7 +280,22 @@
     "    urlretrieve(url, output_dir) \n",
     "    \n",
     "    print(f\"Completed month {month}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Begin month 01\n",
+      "Completed month 01\n",
+      "Begin month 02\n",
+      "Completed month 02\n",
+      "Begin month 03\n",
+      "Completed month 03\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -349,24 +349,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "a3865f8a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T06:37:09.465916Z",
+     "start_time": "2025-08-07T06:37:07.860127Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "\n",
     "df = pd.read_parquet('../data/tlc_data/2024-01.parquet')\n",
     "df.tail()"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "         VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "2964619         2  2024-01-31 23:45:59   2024-01-31 23:54:36              NaN   \n",
+       "2964620         1  2024-01-31 23:13:07   2024-01-31 23:27:52              NaN   \n",
+       "2964621         2  2024-01-31 23:19:00   2024-01-31 23:38:00              NaN   \n",
+       "2964622         2  2024-01-31 23:07:23   2024-01-31 23:25:14              NaN   \n",
+       "2964623         1  2024-01-31 23:58:25   2024-02-01 00:13:30              NaN   \n",
+       "\n",
+       "         trip_distance  RatecodeID store_and_fwd_flag  PULocationID  \\\n",
+       "2964619           3.18         NaN               None           107   \n",
+       "2964620           4.00         NaN               None           114   \n",
+       "2964621           3.33         NaN               None           211   \n",
+       "2964622           3.06         NaN               None           107   \n",
+       "2964623           8.10         NaN               None           138   \n",
+       "\n",
+       "         DOLocationID  payment_type  fare_amount  extra  mta_tax  tip_amount  \\\n",
+       "2964619           263             0        15.77   0.00      0.5        2.00   \n",
+       "2964620           236             0        18.40   1.00      0.5        2.34   \n",
+       "2964621            25             0        19.97   0.00      0.5        0.00   \n",
+       "2964622            13             0        23.88   0.00      0.5        5.58   \n",
+       "2964623            75             0        32.40   7.75      0.5        7.29   \n",
+       "\n",
+       "         tolls_amount  improvement_surcharge  total_amount  \\\n",
+       "2964619          0.00                    1.0         21.77   \n",
+       "2964620          0.00                    1.0         25.74   \n",
+       "2964621          0.00                    1.0         23.97   \n",
+       "2964622          0.00                    1.0         33.46   \n",
+       "2964623          6.94                    1.0         55.88   \n",
+       "\n",
+       "         congestion_surcharge  Airport_fee  \n",
+       "2964619                   NaN          NaN  \n",
+       "2964620                   NaN          NaN  \n",
+       "2964621                   NaN          NaN  \n",
+       "2964622                   NaN          NaN  \n",
+       "2964623                   NaN          NaN  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>Airport_fee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2964619</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-31 23:45:59</td>\n",
+       "      <td>2024-01-31 23:54:36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>107</td>\n",
+       "      <td>263</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.77</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.77</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2964620</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-31 23:13:07</td>\n",
+       "      <td>2024-01-31 23:27:52</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>114</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18.40</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>25.74</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2964621</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-31 23:19:00</td>\n",
+       "      <td>2024-01-31 23:38:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>211</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19.97</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>23.97</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2964622</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-31 23:07:23</td>\n",
+       "      <td>2024-01-31 23:25:14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>107</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.88</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5.58</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>33.46</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2964623</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-31 23:58:25</td>\n",
+       "      <td>2024-02-01 00:13:30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>138</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.40</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7.29</td>\n",
+       "      <td>6.94</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>55.88</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
    "id": "2eb83bf4",
    "metadata": {},
-   "source": [
-    "You can then follow the tutorial using the alternative `pandas` syntax."
-   ]
+   "source": "~You can then follow the tutorial using the alternative `pandas` syntax."
   },
   {
    "cell_type": "markdown",
@@ -458,10 +660,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1b5a59dc",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T06:37:37.548927Z",
+     "start_time": "2025-08-07T06:37:22.365534Z"
+    }
+   },
    "source": [
     "import base64\n",
     "import traceback\n",
@@ -484,12 +689,46 @@
     "except Exception as e:\n",
     "    print(f\"{RED}{BOLD}Something went wrong. Reinstall and try again.{RESET}\")\n",
     "    traceback.print_exc()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: warning: setlocale: LC_ALL: cannot change locale (en_US.UTF-8)\n",
+      "bash: warning: setlocale: LC_ALL: cannot change locale (en_US.UTF-8)\n",
+      "WARNING: Using incubator modules: jdk.incubator.vector\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+      "25/08/07 16:37:29 WARN Utils: Your hostname, localhost, resolves to a loopback address: 127.0.0.1; using 10.255.255.254 instead (on interface lo)\n",
+      "25/08/07 16:37:29 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/08/07 16:37:31 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[92m\u001B[1mSuccess! Your environment is set up and you are ready for the first workshop.\u001B[0m\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "e772e6934ef5b69d"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -564,11 +803,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
   }
  },
  "nbformat": 4,
